# pr2_ethercat_drivers

./: .travis.yml  CMakeLists.txt  README.md  stack.xml
eml/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  eml-r36.patch  manifest.xml  package.xml
ethercat_hardware/: .gitignore  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  actuators.conf  actuators_alpha.conf  ethercat_device_plugin.xml  manifest.xml  package.xml
ethercat_hardware/include/ethercat_hardware/: ek1122.h  ethercat_com.h  ethercat_device.h  ethercat_hardware.h  mailbox.h  motor_heating_model.h  motor_model.h  wg014.h  wg021.h  wg05.h  wg06.h  wg0x.h  wg0x_motor_trace.h  wg_eeprom.h  wg_mailbox.h  wg_soft_processor.h  wg_util.h
ethercat_hardware/msg/: ActuatorInfo.msg  BoardInfo.msg  MotorTemperature.msg  MotorTrace.msg  MotorTraceSample.msg  RawFTData.msg  RawFTDataSample.msg
ethercat_hardware/src/: .gitignore  ek1122.cpp  ethercat_com.cpp  ethercat_device.cpp  ethercat_hardware.cpp  ethernet_interface_info.cpp  motor_heating_model.cpp  motor_model.cpp  motorconf.cpp  wg014.cpp  wg021.cpp  wg05.cpp  wg06.cpp  wg0x.cpp  wg0x_motor_trace.cpp  wg_eeprom.cpp  wg_mailbox.cpp  wg_soft_processor.cpp  wg_util.cpp
ethercat_hardware/srv/: SoftProcessorFirmwareRead.srv  SoftProcessorFirmwareWrite.srv  SoftProcessorReset.srv
ethercat_hardware/test/: motor_heating_model_test.cpp  wg0x_test.cpp
fingertip_pressure/: .gitignore  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
fingertip_pressure/demo/: ethercat_configuration.xml  fingertip_demo.launch  fingertip_demo_no_sim.launch
fingertip_pressure/docsrc/: doc.dox  overview.dia
fingertip_pressure/launch/: fingertip_demo.launch  real_hardware_sensor.launch
fingertip_pressure/msg/: PressureInfo.msg  PressureInfoElement.msg
fingertip_pressure/scripts/: plot_pressure.pl  rectangle_viz.py  sensor_info.py  sim_sensor.py  sphere_viz.py  view_fingertip_pressure
fingertip_pressure/src/fingertip_pressure/: __init__.py  colormap.py  fingertip_geometry.py  fingertip_panel.py
fingertip_pressure/test/: pressure_info_test.py  pressure_info_tests.xml  test_marker_rectangle.xml  test_marker_sphere.xml
fingertip_pressure/ui/: fingertip_panel.xrc
mcb_msgs/: mainpage.dox  manifest.xml
mcb_msgs/msg/: MCBActuatorCommand.msg  MCBActuatorState.msg
pr2_ethercat_drivers/: CHANGELOG.rst  CMakeLists.txt  package.xml
